--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               <a href="#" class="btn-project black">Git</a>
               <a href="#" class="btn-project warning">View</a>
             </div>
-          </div>
+          </div>`
         </div>
 
         <div class="col-12 col-md-6 col-lg-4 mb-4 mb-sm-3">
