--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </div>
       </div>
       <div class="row p-3 p-sm-0">
-        <div class="col-12 col-md-6 col-lg-4 mb-4 mb-sm-3">
+        <div class="col-12 col-md-6 col-lg-4 mb-4 mb-sm-3" data-aos="fade-up" data-aos-duration="1000">
           <div class="card shadow1">
             <img src="assets/img/image3.png" class="card-img-top" alt="image3" />
             <div class="card-body">
@@ -193,7 +193,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 col-lg-4 mb-4 mb-sm-3">
+        <div class="col-12 col-md-6 col-lg-4 mb-4 mb-sm-3" data-aos="fade-up" data-aos-duration="2000">
           <div class="card shadow1">
             <img src="assets/img/image3.png" class="card-img-top" alt="image3" />
             <div class="card-body">
@@ -208,7 +208,7 @@
           </div>`
         </div>
 
-        <div class="col-12 col-md-6 col-lg-4 mb-4 mb-sm-3">
+        <div class="col-12 col-md-6 col-lg-4 mb-4 mb-sm-3" data-aos="fade-up" data-aos-duration="3000">
           <div class="card shadow1">
             <img src="assets/img/image3.png" class="card-img-top" alt="image3" />
             <div class="card-body">
@@ -340,16 +340,16 @@
         </div>
       </div>
       <div class="row p-3 p-sm-0">
-        <div class="col-12 col-md-4 col-lg-3 pt-5 pt-sm-3">
+        <div class="col-12 col-md-4 col-lg-3 pt-5 pt-sm-3" data-aos="fade-right" data-aos-duration="800">
           <img class="img-thumbnail zoom" src="assets/img/image3.png" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
         </div>
-        <div class="col-12 col-md-4 col-lg-3 pt-5 pt-sm-3">
+        <div class="col-12 col-md-4 col-lg-3 pt-5 pt-sm-3" data-aos="fade-right" data-aos-duration="1500">
           <img class="img-thumbnail zoom" src="assets/img/image3.png" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
         </div>
-        <div class="col-12 col-md-4 col-lg-3 pt-5 pt-sm-3">
+        <div class="col-12 col-md-4 col-lg-3 pt-5 pt-sm-3" data-aos="fade-left" data-aos-duration="1500">
           <img class="img-thumbnail zoom" src="assets/img/image3.png" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
         </div>
-        <div class="col-12 col-md-4 col-lg-3 pt-5 pt-sm-3">
+        <div class="col-12 col-md-4 col-lg-3 pt-5 pt-sm-3" data-aos="fade-left" data-aos-duration="800">
           <img class="img-thumbnail zoom" src="assets/img/image3.png" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
         </div>
       </div>
@@ -412,11 +412,11 @@
       </div>
       <div class="row p-3 p-sm-0">
 
-        <div class="col-12 col-sm-6 pt-5 pt-sm-3">
+        <div class="col-12 col-sm-6 pt-5 pt-sm-3" data-aos="fade-up" data-aos-duration="1500">
           <img src="/assets/img/image4.png" alt="image4" class="img-fluid">
         </div>
 
-        <div class="col-12 col-sm-6 pt-5 pt-sm-3 align-self-center" style="text-align: center;">
+        <div class="col-12 col-sm-6 pt-5 pt-sm-3 align-self-center" style="text-align: center;" data-aos="fade-right" data-aos-duration="1500">
           <h1>Get in Touch</h1>
           <p clasas="">
             Are you interested in me, contact me immediately let's work together and make some a beautiful project
