--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   </style>
 
   <title>My Portfolio | Surya Asimulya Pratama</title>
+  <link rel="icon" type="images/x-icon" href="assets/img/tittle.png" />
 </head>
 
 <body>
@@ -210,15 +211,15 @@
 
         <div class="col-12 col-md-6 col-lg-4 mb-4 mb-sm-3" data-aos="fade-up" data-aos-duration="3000">
           <div class="card shadow1">
-            <img src="assets/img/image3.png" class="card-img-top" alt="image3" />
+            <img src="assets/img/project1.png" class="card-img-top" alt="image3" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Simple Portfolio</h5>
               <p class="card-text">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="btn-project black">Git</a>
-              <a href="#" class="btn-project warning">View</a>
+              <a href="https://github.com/suryasamp/portfolio.git" target="_blank" class="btn-project black">Git</a>
+              <a href="https://portfoliosurya.netlify.app/" target="_blank" class="btn-project warning">View</a>
             </div>
           </div>
         </div>
