Add parallax footer

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
   <!-- ------------------------------ jumbotron ------------------------------ -->
-  <section id="home" class="" style="padding-top: 8rem; padding-bottom: 8rem;">
+  <section id="home" class="jumbotron" style="">
     <div class="box">
       <div class=""></div>
       <div class=""></div>
@@ -127,16 +127,16 @@
   </section>
 
   <!-- ------------------------------ about me ------------------------------- -->
-  <section id="about_me" class="" style="padding-top: 7rem; padding-bottom: 8rem;">
+  <section id="about_me" class="about" style="">
     <div class="container">
-      <div class="position-absolute w-25 d-none d-lg-block" style="opacity: 0.5;left: 40%; z-index: -1; padding-top: 12rem;">
+      <div class="position-absolute w-25 d-none d-lg-block" style="opacity: 0.5;left: 40%; z-index: 1; padding-top: 12rem;">
         <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
           <path fill="#F9A31C"
             d="M35.2,-48.8C40.5,-37.4,36.3,-21.6,40.9,-5.7C45.4,10.1,58.8,25.9,58.7,41.2C58.6,56.6,45,71.5,29.4,74.3C13.8,77.2,-3.8,67.9,-19.9,59.9C-36.1,51.8,-50.9,44.8,-57.4,33.3C-64,21.7,-62.3,5.5,-59.8,-10.8C-57.3,-27.2,-53.9,-43.7,-43.8,-54.2C-33.7,-64.8,-16.8,-69.4,-1,-68.3C14.9,-67.2,29.8,-60.3,35.2,-48.8Z"
             transform="translate(100 100)" />
         </svg>
       </div>
-      <div class="position-absolute w-25 d-none d-lg-block" style="opacity: 0.7;left: 75%; z-index: -1;">
+      <div class="position-absolute w-25 d-none d-lg-block" style="opacity: 0.7;left: 75%; z-index: 1;">
         <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
           <path fill="#F9A31C"
             d="M46.6,-81.4C59.8,-73,69.7,-59.5,77.9,-45C86.1,-30.6,92.6,-15.3,92.1,-0.3C91.6,14.8,84.2,29.5,75.5,43.2C66.9,56.8,57.1,69.4,44.3,76.8C31.5,84.3,15.8,86.6,0.4,85.9C-14.9,85.1,-29.8,81.3,-43.3,74.2C-56.8,67.2,-68.8,57,-77.9,44C-86.9,31.1,-92.9,15.6,-92.2,0.4C-91.5,-14.8,-84.1,-29.5,-75.4,-43C-66.7,-56.4,-56.6,-68.5,-43.8,-77.2C-31,-85.9,-15.5,-91.2,0.6,-92.2C16.7,-93.2,33.3,-89.9,46.6,-81.4Z"
@@ -171,7 +171,7 @@
   </section>
 
   <!-- ------------------------------- Project ------------------------------- -->
-  <section id="project" class="bg-black bg-opacity-10 bg-gradient" style="padding-top: 7rem; padding-bottom: 15rem;">
+  <section id="project" class="project">
     <div class="container">
       <div class="row text-center">
         <div class="col pb-4">
@@ -180,13 +180,13 @@
       </div>
       <div class="row p-3 p-sm-0">
         <div class="col-12 col-md-6 col-lg-4 mb-4 mb-sm-3" data-aos="fade-up" data-aos-duration="1000">
-          <div class="card shadow1">
+          <div class="card shadow1 ">
             <img src="assets/img/image3.png" class="card-img-top" alt="image3" />
-            <div class="card-body">
+            <div class="card-body mb-2">
               <h5 class="card-title">Card title</h5>
-              <p class="card-text">
+              <p class="card-text pb-2">
                 Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                the bulk of the card's.
               </p>
               <a href="#" class="btn-project black">Git</a>
               <a href="#" class="btn-project warning">View</a>
@@ -197,11 +197,11 @@
         <div class="col-12 col-md-6 col-lg-4 mb-4 mb-sm-3" data-aos="fade-up" data-aos-duration="2000">
           <div class="card shadow1">
             <img src="assets/img/image3.png" class="card-img-top" alt="image3" />
-            <div class="card-body">
+            <div class="card-body mb-2">
               <h5 class="card-title">Card title</h5>
-              <p class="card-text">
+              <p class="card-text pb-2">
                 Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                the bulk of the card's.
               </p>
               <a href="#" class="btn-project black">Git</a>
               <a href="#" class="btn-project warning">View</a>
@@ -212,11 +212,10 @@
         <div class="col-12 col-md-6 col-lg-4 mb-4 mb-sm-3" data-aos="fade-up" data-aos-duration="3000">
           <div class="card shadow1">
             <img src="assets/img/project1.png" class="card-img-top" alt="image3" />
-            <div class="card-body">
+            <div class="card-body mb-2">
               <h5 class="card-title">Simple Portfolio</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+              <p class="card-text pb-2">
+                This website is created using HTML, CSS and JavaScript
               </p>
               <a href="https://github.com/suryasamp/portfolio.git" target="_blank" class="btn-project black">Git</a>
               <a href="https://portfoliosurya.netlify.app/" target="_blank" class="btn-project warning">View</a>
@@ -228,12 +227,11 @@
   </section>
 
   <!-- -------------------------------- skils -------------------------------- -->
-  <section id="skills" class="bg-white bg-opacity-10 bg-gradient" style="margin-top: -7rem;">
+  <div id="skills" class="skils" style="">
     <div class="ms-3 me-3 ms-sm-5 me-sm-5">
       <div class="rounded-5 bg-gradientc shadow-lg" style="background-color: #fff;">
         <div class="row text-center">
           <div class="col pt-4">
-            <!-- <h1 class="text-light">Skills</h1> -->
           </div>
         </div>
         <div class="row p-3 p-sm-0">
@@ -328,11 +326,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
   <!-- ----------------------------- certificate ----------------------------- -->
 
-  <section id="certificate" class="" style="padding-top: 7rem; padding-bottom: 8rem;">
+  <section id="certificate" class="certificate">
     <div class="container">
       <div class="row text-center">
         <div class="col pb-4">
@@ -404,7 +402,7 @@
   </section>
 
   <!-- ----------------------------- Contact me ------------------------------ -->
-  <section id="cantact_me" class="" style="padding-top: 5rem; padding-bottom: 8rem;background-color: #f3f4f5;">
+  <section id="cantact_me" class="contact">
     <div class="container">
       <div class="row text-center">
         <div class="col pb-4">
@@ -439,7 +437,7 @@
 
   <!-- ------------------------------- FOOTER -------------------------------- -->
 
-  <section id="" class="bg-dark bg-gradient">
+  <div id="" class="bg-dark bg-gradient footer-parallax">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 230">
       <path fill="#F3F4F5" fill-opacity="1" d="M0,96L240,128L480,96L720,96L960,64L1200,160L1440,32L1440,0L1200,0L960,0L720,0L480,0L240,0L0,0Z"></path>
     </svg>
@@ -508,7 +506,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
   <!-- ------------------------------- SCRIPT -------------------------------- -->
 
